# zmlify

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  iree_zig.patch  rules_zig.patch  run.sh  zml.patch
bazel/: zig_index.json
iree-executor/: BUILD.bazel  example.mlir  example_mac.vmfb  iree-gen.py  iree_shim.c  module.vmfb  module_metal.vmfb  module_wasm.vmfb  run.sh  test_iree.zig
resnet-18/: BUILD.bazel  README.md  main.zig  pipeline.zig  resnet18.zig  run.sh  utils.zig
resnet-18/python/: README.md  pyproject.toml  resnet18-pytorch-pipeline.py  resnet18-simple.py  resnet18.py
simple/: BUILD.bazel  README.md  benchmarks.zig  context.zig  main.zig  model.zig  optimized.zig  reference.zig  run.sh  tests.zig  tests_zml_main.zig
tools/: zls.sh
translate-c/: BUILD.bazel
zerkerus/: BUILD.bazel  README.md  client.zig  documentation.md  engine.zig  flatbuf_tools.zig  main.zig  math.zig  params.zig  run.sh  server.zig  task.md  test_iree.zig  utils.zig  wasm.zig  zerkerus_fbs_bridge.c  zerkerus_fbs_bridge.h
zerkerus/idl/: all.fbs  challenge.fbs  commitment.fbs  proof.fbs  registration.fbs  response.fbs
zerkerus/web/: index.html  zerkerus.test.js
zk-crypto/: BUILD.bazel  README.md  crypto.zig  fiat_shamir.zig  fiat_shamir_test.zig  labrador.zig  labrador_test.zig  ntt.zig  ntt_test.zig  run.sh
zk-resnet/: BUILD.bazel  README.md  hash_model.zig  main.zig  run.sh  sampler.zig  sampler_test.zig  zk_lookup.zig
