module(
    name = "simple",
    version = "0.1.0",
)

bazel_dep(name = "rules_zig", version = "0.12.2")
bazel_dep(name = "zml", version = "0.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.5.5")

git_override(
    module_name = "rules_zig",
    commit = "553e22f8dcbd7c472ce8fc256c0d06580cd70630",
    patch_strip = 1,
    patches = ["//:rules_zig.patch"],
    remote = "https://github.com/zml/rules_zig.git",
)

bazel_dep(name = "iree_core", version = "0.0.1")
# git_override(
#     module_name = "iree_core",
#     commit = "ae97779f59a81bc56f804927be57749bb22548fa",
#     remote = "https://github.com/iree-org/iree.git",
#     recursive_init_submodules = True,
# )

# git clone --branch v3.10.0 --recursive --depth 1 https://github.com/iree-org/iree.git iree-sources
local_path_override(
    module_name = "iree_core",
    path = "iree-sources",
)

non_module_deps = use_extension("//:third_party/non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "flatcc", "stb",  "llvm-raw")


iree_ext = use_extension("@iree_core//build_tools/bazel:extensions.bzl", "iree_extension")
inject_repo(iree_ext, "llvm-raw")



### Zig toolchain
# zig = use_extension("@rules_zig//zig:extensions.bzl", "zig")
# zig.index(file = "//bazel:zig_index.json")
# zig.toolchain(zig_version = "0.16.0-dev.2611+f996d2866")
# zig.mirrors(urls = [
#     "https://pkg.machengine.org/zig",
#     "https://zigmirror.hryx.net/zig",
#     "https://zig.linus.dev/zig",
#     "https://zig.squirl.dev",
#     "https://zig.florent.dev",
#     "https://zig.mirror.mschae23.de/zig",
#     "https://zigmirror.meox.dev",
#     "https://ziglang.freetls.fastly.net",
#     "https://zig.tilok.dev",
#     "https://zig-mirror.tsimnet.eu/zig",
#     "https://zig.karearl.com/zig",
#     "https://pkg.earth/zig",
#     "https://fs.liujiacai.net/zigbuilds",
#     "https://ziglang.org/builds/",
# ])
# use_repo(zig, "zig_toolchains")
# 
# register_toolchains("@rules_zig//zig/target:all")
# 
# register_toolchains("@zig_toolchains//:all")
###

git_override(
    module_name = "zml",
    commit = "6be028f873dba5683f131f549c153e8081c9db39",
    patch_strip = 1,
    patches = ["//:zml.patch"],
    remote = "https://github.com/zml/zml.git",
)

# Keep for local development
# local_path_override(
#     module_name = "zml",
#     path = "zml-local",
# )
bazel_dep(name = "llvm-project-overlay", version = "main")
local_path_override(
    module_name = "llvm-project-overlay",
    path = "iree-sources/third_party/llvm-project/utils/bazel",
)

zml_non_module_deps = use_extension("@zml//:third_party/non_module_deps.bzl", "non_module_deps")
use_repo(
    zml_non_module_deps,
    "translate-c",
    # "xla",
)

zls = use_extension("@zml//third_party/zls:zls_toolchain.bzl", "zls_toolchains")
use_repo(zls, "zls_toolchains")

register_toolchains("@zls_toolchains//:all")

### LLVM Bootstrapped toolchains
register_toolchains(
    "@toolchains_llvm_bootstrapped//toolchain:all",
)
###
