load("@rules_zig//zig:defs.bzl", "zig_library", "zig_binary", "zig_test")

zig_library(
    name = "resnet-18_lib",
    main = "main.zig",
    srcs = [
        "pipeline.zig",
        "resnet18.zig",
        "utils.zig",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@zml//zml",
        "@stb//:stb",
    ],
)

zig_binary(
    name = "resnet-18",
    deps = [
        ":resnet-18_lib",
    ],
    visibility = ["//visibility:public"],
)
