load("@rules_zig//zig:defs.bzl", "zig_library", "zig_binary", "zig_test")

zig_library(
    name = "simple_lib",
    main = "main.zig",
    srcs = [
        "benchmarks.zig",
        "context.zig",
        "model.zig",
        "optimized.zig",
        "reference.zig",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@zml//zml",
    ],
)

zig_binary(
    name = "simple",
    deps = [
        ":simple_lib",
    ],
    visibility = ["//visibility:public"],
)

zig_test(
    name = "simple_test",
    main = "tests.zig",
    srcs = [
        "optimized.zig",
        "reference.zig",
    ],
    deps = [],
)

zig_binary(
    name = "simple_test_zml",
    main = "tests_zml_main.zig",
    srcs = [
        "model.zig",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@zml//zml",
    ],
)
