load("@rules_zig//zig:defs.bzl", "zig_binary", "zig_test")
load("//third_party/flatbuf:defs.bzl", "flatcc_library")

flatcc_library(
    name = "zerkerus_fbs",
    src = "idl/all.fbs",
    schema_deps = [
        "idl/registration.fbs",
        "idl/commitment.fbs",
        "idl/challenge.fbs",
        "idl/response.fbs",
    ],
    outs = [
        "all_builder.h",
        "all_reader.h",
        "all_verifier.h",
        "all_json_parser.h",
        "all_json_printer.h",
        "registration_builder.h",
        "registration_reader.h",
        "registration_verifier.h",
        "registration_json_parser.h",
        "registration_json_printer.h",
        "commitment_builder.h",
        "commitment_reader.h",
        "commitment_verifier.h",
        "commitment_json_parser.h",
        "commitment_json_printer.h",
        "challenge_builder.h",
        "challenge_reader.h",
        "challenge_verifier.h",
        "challenge_json_parser.h",
        "challenge_json_printer.h",
        "response_builder.h",
        "response_reader.h",
        "response_verifier.h",
        "response_json_parser.h",
        "response_json_printer.h",
        "flatbuffers_common_builder.h",
        "flatbuffers_common_reader.h",
    ],
)

cc_library(
    name = "zerkerus_fbs_wrapper",
    deps = [":zerkerus_fbs"],
    defines = ["__building_module(x)=0"],
)

cc_library(
    name = "zerkerus_fbs_bridge",
    srcs = ["zerkerus_fbs_bridge.c"],
    hdrs = ["zerkerus_fbs_bridge.h"],
    deps = [":zerkerus_fbs_wrapper"],
)


zig_binary(
    name = "zerkerus",
    main = "main.zig",
    srcs = [
        "params.zig",
        "utils.zig",
        "math.zig",
        "flatbuf_tools.zig",
        "client.zig",
        "server.zig",
        "engine.zig",
    ],
    deps = [
        "//zk-crypto",
        "@zml//zml",
        ":zerkerus_fbs_bridge",
    ],
    visibility = ["//visibility:public"],
)

zig_test(
    name = "zerkerus_test",
    main = "main.zig",
    srcs = [
        "params.zig",
        "utils.zig",
        "math.zig",
        "flatbuf_tools.zig",
        "client.zig",
        "server.zig",
        "engine.zig",
    ],
    deps = [
        "//zk-crypto",
        "@zml//zml",
        ":zerkerus_fbs_bridge",
    ],
)

zig_test(
    name = "zerkerus_utils_test",
    main = "utils.zig",
)

zig_test(
    name = "zerkerus_math_test",
    main = "math.zig",
    srcs = [
        "params.zig",
    ],
    deps = [
        "//zk-crypto",
        "@zml//zml",
    ],
)

zig_test(
    name = "zerkerus_flatbuf_test",
    main = "flatbuf_tools.zig",
    deps = [
        ":zerkerus_fbs_bridge",
    ],
)

zig_binary(
    name = "test_iree",
    main = "test_iree.zig",
    deps = [
        "@iree_core//runtime/src/iree/hal:hal",
        "@iree_core//runtime/src/iree/base:base",
    ],
    tags = ["local", "no-sandbox"],
)
